- BUG in tinyMCE (iframe overflow)
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@533 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

--- a/sys/flexyadmin/assets/css/admin_main.css
+++ b/sys/flexyadmin/assets/css/admin_main.css
@@ -1215,3 +1215,6 @@ div#help_messages {
 iframe {
 	overflow:hidden;
 }
+.mceEditor iframe {
+	overflow:auto;
+}
